--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,6 +13,6 @@
 <body>
 <div id="root"></div>
 
-<script src="/dist/bundle.js"></script>
+<script src="bundle.js"></script>
 </body>
 </html>
